--- a/index.html
+++ b/index.html
@@ -1,86 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Vintage Interior Design Portfolio</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="styles.css" />
+    <title>EcoRide - Electric Scooter Rental</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Vintage Interior Design World</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <section id="about" class="hero">
-    <h2>Hi, I'm Zaeem!</h2>
-    <p>
-      Ever since I was young, I've been fascinated by the charm of vintage
-      interiors. From ornate Victorian chairs to mid-century modern sofas, I
-      love bringing old worlds back to life in homes. My passion is turning
-      spaces into cozy retreats with a touch of history. Let's dive into some
-      of my inspirations and projects below.
-    </p>
-  </section>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+        <a class="navbar-brand fw-bold" href="#">EcoRide</a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-  <section id="gallery">
-    <h2>Inspiration Gallery</h2>
-    <article class="gallery">
+<!-- Hero Section -->
+<section class="hero text-white">
+    <div class="container">
+        <div class="row align-items-center">
 
-      <figure>
-        <img src="IMAGE_URL" alt="Victorian living room" />
-        <figcaption>Classic Victorian Style</figcaption>
-      </figure>
+            <!-- Text -->
+            <div class="col-md-6 text-center text-md-start">
+                <h1 class="display-4">Ride Green. Ride Smart.</h1>
+                <p class="lead">
+                    Affordable electric scooter rentals for daily commuting
+                </p>
+                <button class="btn btn-light btn-lg">Get Started</button>
+            </div>
 
-      <figure>
-        <img src="IMAGE_URL" alt="Mid-century dining room" />
-        <figcaption>Mid-Century Modern Dining</figcaption>
-      </figure>
+            <!-- Image -->
+            <div class="col-md-6 text-center">
+                <img src="scooter.jpg" 
+                     class="img-fluid rounded" 
+                     alt="Electric Scooter">
+            </div>
 
-      <figure>
-        <img src="IMAGE_URL" alt="Rustic farmhouse bedroom" />
-        <figcaption>Rustic Farmhouse Bedroom</figcaption>
-      </figure>
+        </div>
+    </div>
+</section>
+<!-- Services Section -->
+<section class="container my-5">
+    <div class="row text-center">
+        <div class="col-md-4">
+            <div class="card p-4">
+                <h4>Eco-Friendly</h4>
+                <p>Zero emissions for a cleaner city.</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card p-4">
+                <h4>Affordable</h4>
+                <p>Low-cost rentals starting at ₹49/hour.</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card p-4">
+                <h4>Easy Access</h4>
+                <p>Book scooters using our mobile app.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
-      <figure>
-        <img src="IMAGE_URL" alt="Art Deco lounge" />
-        <figcaption>Art Deco Lounge</figcaption>
-      </figure>
+<!-- Pricing Section -->
+<section class="bg-light py-5">
+    <div class="container text-center">
+        <h2 class="mb-4">Pricing Plans</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>Hourly</h5>
+                    <p class="price">₹49 / hour</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>Daily</h5>
+                    <p class="price">₹299 / day</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>Monthly</h5>
+                    <p class="price">₹1999 / month</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-      <figure>
-        <img src="IMAGE_URL" alt="1950s kitchen" />
-        <figcaption>1950s Retro Kitchen</figcaption>
-      </figure>
-
-    </article>
-  </section>
-
-  <section id="contact" class="contact-form">
-    <h2>Let's Chat!</h2>
-
-    <form>
-      <input type="text" placeholder="Your name" required />
-      <input type="email" placeholder="Email" required />
-      <textarea placeholder="Message" required></textarea>
-      <button type="submit">Send</button>
+<!-- Contact Section -->
+<section class="container my-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <form class="w-50 mx-auto">
+        <input type="text" class="form-control mb-3" placeholder="Full Name">
+        <input type="email" class="form-control mb-3" placeholder="Email Address">
+        <textarea class="form-control mb-3" placeholder="Message"></textarea>
+        <button class="btn btn-success w-100">Submit</button>
     </form>
+</section>
 
-    <p>Phone: +91 91254 10382</p>
-    <p>Email: zaeem.241238.co@mhssce.ac.in</p>
-  </section>
-
-  <footer>
-    <p>© 2023 Zaeem's Vintage Portfolio</p>
-  </footer>
 </body>
 </html>
